Improve Post flow
