# src/app/express/controllers/post_controller.ts
@@ -1,30 +1,24 @@
 import { Router, Request, Response } from 'express';
 import { Db } from 'mongodb';
 import PostUsecases from '../../../domain/usecases/post';
-import {
-  ICreatePost,
-  IInteractionWithPost,
-} from '../../../domain/usecases/interfaces/interface.post';
+import { IInteractionWithPost } from '../../../domain/usecases/interfaces/interface.post';
 import Post from '../../../domain/model/post';
-import { Query } from '../../../domain/ports/post_data_port';
+import { PostQuery } from '../../../domain/ports/post_data_port';
 import PostWithInteractions from '../../../domain/model/postWithInteractions';
 import Neo4jRepository from '../../neo4j/neo4j_repository';
 import PostDataAdapter from '../../adapters/post_data_adapter';
-import HashtagUsecases from '../../../domain/usecases/hashtag';
+import { DataSource } from 'typeorm';
+import HashtagDataAdapter from '../../adapters/hashtag_data_adapter';
 
 export default class PostController {
   private readonly _router: Router;
   private postUsecases: PostUsecases;
 
-  constructor(
-    mongo: Db,
-    neo4j: Neo4jRepository,
-    private hashtagUsecases: HashtagUsecases
-  ) {
+  constructor(mongo: Db, neo4j: Neo4jRepository, postgres: DataSource) {
     this._router = Router();
     this.postUsecases = new PostUsecases(
       new PostDataAdapter(mongo, neo4j),
-      hashtagUsecases
+      new HashtagDataAdapter(postgres)
     );
     this.mapRoutes();
   }
@@ -34,24 +28,26 @@ export default class PostController {
   }
 
   private async getPosts(req: Request, resp: Response) {
-    const query: Query = { ...req.query };
+    const query: PostQuery = { ...req.query };
     const posts: Post[] = await this.postUsecases.getPosts(query);
     resp.status(200).json(posts);
   }
 
   private async getPostById(req: Request, resp: Response) {
     const postId = req.params.id;
-    const post: PostWithInteractions | null =
-      await this.postUsecases.getPostWithInteractionsById(postId);
-    if (post != null) resp.status(200).json(post);
+    const usecaseResp = await this.postUsecases.getPostWithInteractionsById(
+      postId
+    );
+    if (usecaseResp.succeed) resp.status(200).json(usecaseResp.response);
     else resp.sendStatus(404);
   }
 
   private async createPost(req: Request, resp: Response) {
-    const input: ICreatePost = req.body as ICreatePost;
-    const id = await this.postUsecases.createPost(input);
-    if (id != null) resp.status(201).json(id);
-    else resp.sendStatus(400);
+    const session = req.body.session;
+    const text = req.body.text;
+    const usecaseResp = await this.postUsecases.createPost(session, text);
+    if (usecaseResp.succeed) resp.status(201).json(usecaseResp.response);
+    else resp.status(400).json(usecaseResp.errors);
   }
 
   private async likePost(req: Request, resp: Response) {
@@ -63,34 +59,37 @@ export default class PostController {
 
   private async sharePost(req: Request, resp: Response) {
     const id = req.params.id;
-    const inputBody: ICreatePost = req.body as ICreatePost;
-    const input: IInteractionWithPost = {
-      accountId: inputBody.accountId,
-      text: inputBody.text,
-      sharedPostId: id,
-    };
-    const createdId = this.postUsecases.interactWithPost(input, 'SHARE');
-    if (createdId != null) resp.sendStatus(201);
-    else resp.sendStatus(400);
+    // const inputBody: ICreatePost = req.body as ICreatePost;
+    // const input: IInteractionWithPost = {
+    //   accountId: inputBody.accountId,
+    //   text: inputBody.text,
+    //   sharedPostId: id,
+    // };
+    // const createdId = this.postUsecases.interactWithPost(input, 'SHARE');
+    // if (createdId != null) resp.sendStatus(201);
+    // else resp.sendStatus(400);
   }
 
   private async replyToPost(req: Request, resp: Response) {
     const id = req.params.id;
-    const inputBody: ICreatePost = req.body as ICreatePost;
-    const input: IInteractionWithPost = {
-      accountId: inputBody.accountId,
-      text: inputBody.text,
-      sharedPostId: id,
-    };
-    const createdId = this.postUsecases.interactWithPost(input, 'REPLY');
-    if (createdId != null) resp.sendStatus(201);
-    else resp.sendStatus(400);
+    // const inputBody: ICreatePost = req.body as ICreatePost;
+    // const input: IInteractionWithPost = {
+    //   accountId: inputBody.accountId,
+    //   text: inputBody.text,
+    //   sharedPostId: id,
+    // };
+    // const createdId = this.postUsecases.interactWithPost(input, 'REPLY');
+    // if (createdId != null) resp.sendStatus(201);
+    // else resp.sendStatus(400);
   }
 
   private async deletePostById(req: Request, resp: Response) {
     const postId = req.params.id;
-    this.postUsecases.deletePostById(postId);
-    resp.sendStatus(200);
+    const session = req.body.session;
+    const usecaseResp = await this.postUsecases.deletePostById(session, postId);
+    if (usecaseResp.succeed) resp.sendStatus(200);
+    else if (!usecaseResp.errors) resp.sendStatus(500);
+    else resp.sendStatus(401);
   }
 
   private mapRoutes() {
